# ttyx_

./: CHANGELOG.md  CONTRIBUTING.md  NEWS  README.md  RELEASE.md  ROADMAP.md  debug-ttyx.sh  dub.json  extract-strings.sh  install.sh  meson.build  uninstall.sh
.github/ci/: Dockerfile-debian-stable  Dockerfile-debian-testing  Dockerfile-ubuntu-noble  install-deps-deb.sh  install-ldc-tarball.sh  measure-memory.sh
.github/workflows/: build-test.yml
data/: meson.build
data/dbus/: io.github.gwelr.ttyx.service  io.github.gwelr.ttyx.service.in
data/gsettings/: com.gexperts.Tilix.gschema.xml  io.github.gwelr.ttyx.gschema.xml  reset.sh
data/man/: meson.build  ttyx.1
data/metainfo/: io.github.gwelr.ttyx.appdata.xml.in
data/nautilus/: open-ttyx.py
data/pkg/desktop/: io.github.gwelr.ttyx.desktop.in
data/resources/: generate-symbolic.sh  ttyx.gresource.xml
data/resources/css/: ttyx.Ambiance.css  ttyx.Radiance.css  ttyx.base.css  ttyx.base.theme.css  ttyx.base320.css
data/resources/ui/: shortcuts.ui
data/schemes/: catppuccin-latte.json  catppuccin-mocha.json  dracula.json  gruvbox-dark.json  gruvbox-light.json  nord.json  one-dark.json  tokyo-night.json
data/scripts/: ttyx_int.sh
docs/: _config.yml  changelog.md  develop.md  index.md  install.md  memory-baseline.md  migrating.md  security.md  whats-new.md
docs/manual/: badges.md  cliactions.md  customlinks.md  index.md  margin.md  profileswitch.md  quake.md  themes.md  title.md  triggers.md  vteconfig.md
flatpak/: io.github.gwelr.ttyx.yaml
po/: meson.build
source/: app.d
source/gx/gtk/: resource.d
source/gx/tilix/: application.d  appwindow.d  cmdparams.d  colorschemes.d  constants.d  preferences.d  session.d  shortcuts.d  sidebar.d
source/gx/tilix/prefeditor/: advdialog.d  prefdialog.d  profileeditor.d
source/gx/tilix/terminal/: activeprocess.d  advpaste.d  clipboard.d  context.d  exvte.d  flatpak.d  monitor.d  password.d  process.d  search.d  state.d  terminal.d  test_integration.d  types.d
source/gx/ttyx/: application.d  appwindow.d  closedialog.d  cmdparams.d  colorschemes.d  common.d  constants.d  customtitle.d  encoding.d  preferences.d  session.d  shortcuts.d  sidebar.d
source/gx/ttyx/bookmark/: bmchooser.d  bmeditor.d  bmtreeview.d  manager.d
source/gx/ttyx/prefeditor/: advdialog.d  bookmarkeditor.d  common.d  prefdialog.d  profileeditor.d  titleeditor.d
source/gx/ttyx/terminal/: actions.d  activeprocess.d  advpaste.d  clipboard.d  context.d  exvte.d  flatpak.d  layout.d  monitor.d  password.d  process.d  regex.d  renderer.d  search.d  spawn.d  state.d  terminal.d  test_integration.d  types.d  util.d
source/gx/util/: geometry.d  proc.d  redact.d  string.d
